--- a/index.html
+++ b/index.html
@@ -6,11 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Landing Page</title>
 </head>
-<body>
-    <h1>Teste</h1>
+<body class="py-5">
+    <div class="container px-4 container1">
+        <!-- LOGO -->
+        <div class="text-center">
+            <img src="./images/imgLogo.svg" alt="Logo">
+        </div>
 
+        <!-- Primeira divisão do form -->
+        <p class="paragraph">
+            1- Qual seu nome programador:
+        </p>
+
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">Primeiro Nome:</span>
+            <input class="form-control" type="text" placeholder="Digite aqui" aria-label="Username" aria-describedby="basic-addon1">
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">Segundo Nome:</span>
+            <input class="form-control" type="text" placeholder="Digite aqui" aria-label="Username" aria-describedby="basic-addon1">
+        </div>
+    </div>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
