--- a/index.html
+++ b/index.html
@@ -29,7 +29,57 @@
             <span class="input-group-text" id="basic-addon1">Segundo Nome:</span>
             <input class="form-control" type="text" placeholder="Digite aqui" aria-label="Username" aria-describedby="basic-addon1">
         </div>
+
+        <!-- Segunda divisão do form -->
+        <p class="paragraph mt-3">
+            2 - Qual o seu gênero? 
+        </p>
+
+        <div class="form-check mb-2">
+            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+            <label class="form-check-label" for="exampleRadios1">
+              Homem
+            </label>
+          </div>
+          <div class="form-check mb-2">
+            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+            <label class="form-check-label" for="exampleRadios2">
+              Mulher
+            </label>
+          </div>
+          <div class="form-check mb-2">
+            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
+            <label class="form-check-label" for="exampleRadios3">
+              Prefiro não informar
+            </label>
+          </div>
+
+        <!-- Terceira divisão do form -->
+        <p class="paragraph mt-3">
+            3 - Marque suas soft skills:
+        </p>
+
+        <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">Colaboração</label>
+          </div>
+          <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
+            <label class="form-check-label" for="flexSwitchCheckChecked">Flexibilidade</label>
+          </div>
+          <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDisabled">
+            <label class="form-check-label" for="flexSwitchCheckDisabled">Resiliência</label>
+          </div>
+          <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckCheckedDisabled">
+            <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Comunicação eficaz</label>
+          </div>
+
+
     </div>
+
+    
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
