Atualização do Index

--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
             <label class="form-check-label" for="exampleRadios1">
               Homem
             </label>
-          </div>
-          <div class="form-check mb-2">
+        </div>
+        <div class="form-check mb-2">
             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
             <label class="form-check-label" for="exampleRadios2">
               Mulher
             </label>
-          </div>
-          <div class="form-check mb-2">
+        </div>
+        <div class="form-check mb-2">
             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
             <label class="form-check-label" for="exampleRadios3">
               Prefiro não informar
             </label>
-          </div>
+        </div>
 
         <!-- Terceira divisão do form -->
         <p class="paragraph mt-3">
@@ -62,20 +62,67 @@
         <div class="form-check form-switch">
             <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
             <label class="form-check-label" for="flexSwitchCheckDefault">Colaboração</label>
-          </div>
-          <div class="form-check form-switch">
+        </div>
+        <div class="form-check form-switch">
             <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
             <label class="form-check-label" for="flexSwitchCheckChecked">Flexibilidade</label>
-          </div>
-          <div class="form-check form-switch">
+        </div>
+        <div class="form-check form-switch">
             <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDisabled">
             <label class="form-check-label" for="flexSwitchCheckDisabled">Resiliência</label>
-          </div>
-          <div class="form-check form-switch">
+        </div>
+        <div class="form-check form-switch">
             <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckCheckedDisabled">
             <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Comunicação eficaz</label>
-          </div>
+        </div>
 
+        <!-- Quarta divisão do form -->
+        <p class="paragraph mt-3">
+            4 - Marque suas hard skills:
+        </p>
+
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+            <label class="form-check-label" for="inlineCheckbox1">HTML</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+            <label class="form-check-label" for="inlineCheckbox2">CSS</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">GitHub</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+            <label class="form-check-label" for="inlineCheckbox4">Node.js</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
+            <label class="form-check-label" for="inlineCheckbox5">JavaScript</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="option6">
+            <label class="form-check-label" for="inlineCheckbox6">React</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox7" value="option7">
+            <label class="form-check-label" for="inlineCheckbox7">Bash</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox8" value="option8">
+            <label class="form-check-label" for="inlineCheckbox8">Express.js</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox9" value="option9">
+            <label class="form-check-label" for="inlineCheckbox9">MongoDB</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox10" value="option10">
+            <label class="form-check-label" for="inlineCheckbox10">Nginx</label>
+        </div>
+
+        <!-- Quinta divisão do form -->
 
     </div>
 
