--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container px-4 container1">
         <!-- LOGO -->
         <div class="text-center">
-            <img src="./images/imgLogo.svg" alt="Logo">
+            <img class="img-fluid" src="./images/imgLogo.svg" alt="Logo">
         </div>
 
         <!-- Primeira divisão do form -->
@@ -122,8 +122,11 @@
             <label class="form-check-label" for="inlineCheckbox10">Nginx</label>
         </div>
 
-        <!-- Quinta divisão do form -->
-
+        <!-- Quinto elemento do form -->
+        <div class="text-center">
+            <button type="button" class="btn btn-outline-primary">Enviar</button>
+        </div>
+        
     </div>
 
     
