--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
         
     </div>
 
+    <div class="container text-center fotter">
+        <p>Feito por Carlos Enryk &COPY;CENRY todos os direitos reservados - 2022</p>
+    </div>
+
     
 
     <!-- JavaScript Bundle with Popper -->
