--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="container px-4 container1">
         <!-- LOGO -->
         <div class="text-center">
-            <img class="img-fluid" src="./images/imgLogo.svg" alt="Logo">
+            <img class="img-fluid topLogo mt-4 mb-3" src="./images/imgLogo.svg" alt="Logo">
         </div>
 
         <!-- Primeira divisão do form -->
         <p class="paragraph">
-            1- Qual seu nome programador:
+            1- Qual seu nome:
         </p>
 
         <div class="input-group mb-3">
@@ -124,7 +124,7 @@
 
         <!-- Quinto elemento do form -->
         <div class="text-center">
-            <button type="button" class="btn btn-outline-primary">Enviar</button>
+            <button type="button" class="btn btn-outline-primary btnSend mb-3">Enviar</button>
         </div>
         
     </div>
