--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Landing Page</title>
 </head>
 <body class="py-5">
-    <div class="container px-4 container1">
+    <div class="container px-4 container1 divBox">
         <!-- LOGO -->
         <div class="text-center">
             <img class="img-fluid topLogo mt-4 mb-3" src="./images/imgLogo.svg" alt="Logo">
